Working is in Progress

--- a/attendencePage/style.css
+++ b/attendencePage/style.css
@@ -1,109 +1,13 @@
- body {
+.boxes{
+    width: 300px;
+    height: 70px;
+    border-radius: 5px;
+    margin: 10px;
+    background-color: white;
+}
+.boxes:hover{
+   background-color: rgb(230, 208, 250);
+}
+body{
     background-color: blueviolet !important;
 }
-
-#mainContainer {
-    border: 2px solid black;
-    width: 500px;
-    height: 250px;
-    box-shadow: 12px 12px 12px rgb(255, 255, 255);
-}
-
-#parentDiv {
-    height: 70vh;
-}
-#h-color{
-    color: lavender;
-}
-#rollNumber {
-    width: 60%;
-    padding: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 6px;
-    font-size: 16px;
-    border-color: rgb(0, 0, 0);
-    font-weight: bolder;
-}
-
-#rollNumber:focus {
-    border-color: #4CAF50;
-    outline: none;
-}
-
-#Name{
-    width: 60%;
-    padding: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 6px;
-    font-size: 16px;
-    border-color: rgb(0, 0, 0);
-    font-weight: bolder;
-
-}
-#Name:focus{
-    border-color: #4CAF50;
-    outline: none;
-
-}
-    button {
-    width: 120px;
-    padding: 10px;
-    margin: 10px;
-    border-radius: 30px !important;
-    border: none;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-    font-weight: bold;
-    font-size: 16px;
-    text-transform: uppercase;
-    transition: all 0.4s ease;
-}
-
-
-#markBtn {
-    background: linear-gradient(135deg, #ffafbd, #ffc3a0);
-    color: #333;
-
-}
-
-#markBtn:hover {
-    background: linear-gradient(135deg, #ffc3a0, #000000);
-    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
-    color: white;
-
-}
-
-#markBtn:focus {
-    outline: none;
-    box-shadow: 0 0 0 3px rgba(76, 175, 80, 0.4); 
-
-}
-
-
-#downloadExcel {
-    background: linear-gradient(135deg, #ffafbd, #ffc3a0);
-    color: #333;
-    border: 2px solid black;
-}
-
-#downloadExcel:hover {
-    background: linear-gradient(135deg, #000000, #ffafbd);
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
-    color: white;
-    transform: scale(1.05);
-}
-
-#downloadExcel:focus {
-    outline: none;
-    box-shadow: 0 0 10px rgba(33, 150, 243, 0.5);
-    transform: rotateY(10deg);
-}
-
-
-
